--- a/backend/.env
+++ b/backend/.env
@@ -4,5 +4,5 @@ NODE_ENV="development"
 CLOUDINARY_CLOUD_NAME="dlqmkxlf6"
 CLOUDINARY_API_KEY="779561399387815"
 CLOUDINARY_API_SECRET="kfUq0QxMgfdn17rjjZZQpQStkY8"
-MONGO_URI="mongodb+srv://aom081:NS2d5N1oG7zUgL91@cluster0.g5ldx.mongodb.net/"
+MONGO_URI="mongodb+srv://aomChat:0817@cluster0.g5ldx.mongodb.net/"
 JWT_SECRET="your_secret_key"
